--- a/examples/basic.html
+++ b/examples/basic.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>Jquery Shuttle Example</title>
+    <title>Shuttle jQuery Plugin</title>
     
     <script type="text/javascript" language="javascript" src="../jquery/jquery-1.9.1.js"></script>
     <script type="text/javascript" language="javascript" src="../jquery/jquery-ui-1.10.3.custom.js"></script>
@@ -52,7 +52,7 @@
     </script>
 </head>
 <body>
-<h1>Jquery Shuttle Example</h1>
+<h1>Shuttle jQuery Plugin</h1>
 <h3>Basic</h3>
 <form id="jForm" name="jForm">
 <div id="querySelectDiv">
@@ -74,5 +74,6 @@
   <span class="button" id="removeBtn">Remove All</span>
   <span class="button" id="disableBtn">Disable</span>
 </div>
+<div style="margin-top:1em;">-- <a href="https://github.com/Archer8685" title="Archer Hsieh, front-end developer" target="_blank">Archer Hsieh</a></div>
 </body>
 </html>
