--- a/examples/index.html
+++ b/examples/index.html
@@ -4,11 +4,12 @@
     <title>KeyDown Combo Demo</title>
 </head>
 <body>
-  <h3>Jquery Shuttle Example</h3>
+  <h3>Shuttle jQuery Plugin</h3>
   <ul>
     <li><a href="basic.html">Basic</a></li>
     <li><a href="theme.html">Theme</a></li>
     <li><a href="filter.html">Filter</a></li>
   </ul>
+  <div style="margin-top:1em;">-- <a href="https://github.com/Archer8685" title="Archer Hsieh, front-end developer" target="_blank">Archer Hsieh</a></div>
 </body>
 </html>
