rename source name.

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
     
     <script type="text/javascript" language="javascript" src="../jquery/jquery-1.9.1.js"></script>
     <script type="text/javascript" language="javascript" src="../jquery/jquery-ui-1.10.3.custom.js"></script>
-    <script type="text/javascript" language="javascript" src="../src/jquery.shuttle-1.0.js"></script>
+    <script type="text/javascript" language="javascript" src="../src/jquery.shuttle.js"></script>
     
     <link rel="stylesheet" type="text/css" href="../jquery/jquery-ui-1.10.3.custom.css" />
     <link rel="stylesheet" type="text/css" href="../src/jquery.shuttle.css" />
